content added to education section

--- a/index.html
+++ b/index.html
@@ -34,11 +34,28 @@
     
         <h3>Exchange Campus</h3>
     </section>
-    <section>
+    <section id="Education">
         <h2>Education</h2>
-        <h3>Programs</h3>
-        <h3>Self learning</h3>
-        <h3>Part-time and on-line Education</h3>
+        <ul>
+            <li>
+                <h3>Full-time Programs</h3>
+            </li>
+                <ul>
+                    <li>Applied Commerce Education</li>
+                    <li>Industrial Arts Education</li>
+                    <li>Educational Assistant</li>
+                    <li>Industrial Arts Education</li>
+                    <li>Technical Vocational Teacher Education</li>
+                </ul>
+            <li>
+                <h3>Part-time Programs</h3>
+            </li>
+                <ul>
+                    <li>Educational Assistant</li>
+                    <li>Technical Vocational Teacher Education</li>
+                    <li>Teaching for Learning in Applied Education</li>
+                </ul>
+        </ul>
     </section>
    
     <section>
