added content to contact us section

--- a/index.html
+++ b/index.html
@@ -58,18 +58,61 @@
         </ul>
     </section>
    
-    <section>
+    <section id="Services">
         <h2>Services</h2>
-        <h3>Compus living</h3>
-        <h3>Compus Store</h3>
-        <h3>Commuting and Parking</h3>
-    
+        <ul>   
+            <li>
+                <a href="https://www.rrc.ca/assessment/" target="_blank">Assessment Services</a>
+            </li>
+            <li>
+                <a href="https://www.rrc.ca/housing/" target="_blank">Campus Living</a>
+            </li>
+            <li>
+                <a href="https://www.rrc.ca/campusstore/" target="_blank">Campus Store</a>
+            </li>
+            <li>
+                <a href="https://www.rrc.ca/services/child-care/" target="_blank">Child Care</a>
+            </li>
+            <li>
+                <a href="https://www.rrc.ca/parking/" target="_blank">Commuting and Parking</a>
+            </li>
+            <li>
+                <a href="https://www.rrc.ca/culex/" target="_blank">Culinary Exchange</a>
+            </li>
+            <li>
+                <a href="https://www.rrc.ca/culex/" target="_blank">Facility Rentals</a>
+            </li>
+            <li>
+                <a href="https://www.rrc.ca/foodservices/" target="_blank">Food Services</a>
+            </li>
+            <li>
+                <a href="https://www.rrc.ca/health/" target="_blank">Health</a>
+            </li>
+            <li>
+                <a href="https://www.rrc.ca/janes/" target="_blank">Jane's</a>
+            </li>
+            <li>
+                <a href="https://www.rrc.ca/well-being/sport/" target="_blank">Recreation and Fitness</a>
+            </li>
+            <li>
+                <a href="https://www.rrc.ca/services/student-service-centres/" target="_blank">Student Service Centres</a>
+            </li>
+        </ul> 
     </section>
 </body>
 <footer>
     <h2>Contact Us</h2>
-
-
+    <ul>
+        <li>
+            <img src="email.svg" alt="email icon" style="width:24px; height:24px; vertical-align: middle; margin-right:2px;">
+            <a href="mailto:studentservices@rrc.ca" target="_blank"> studentservices@rrc.ca </a>
+        </li>
+        <li>
+            <img src="phone.svg" alt="phone icon" style="width: 24px; height: 24px; vertical-align: middle; margin-right: 2px;">
+            <a href="tel:204-632-2327" target="_blank">204-632-2327</a>
+        </li>
+    </ul>
+    <p>&#169; 2024 RRC Polytech. All Rights Reserved.</p>
 </footer>
 
 </html>
