enhanced webpage with accessibility features.

--- a/index.html
+++ b/index.html
@@ -35,84 +35,84 @@
         <h3>Exchange Campus</h3>
     </section>
     <section id="Education">
-        <h2>Education</h2>
+        <h2 tabindex="0">Education</h2>
         <ul>
-            <li>
+            <li tabindex="0">
                 <h3>Full-time Programs</h3>
             </li>
                 <ul>
-                    <li>Applied Commerce Education</li>
-                    <li>Industrial Arts Education</li>
-                    <li>Educational Assistant</li>
-                    <li>Industrial Arts Education</li>
-                    <li>Technical Vocational Teacher Education</li>
+                    <li tabindex="0">Applied Commerce Education</li>
+                    <li tabindex="0">Industrial Arts Education</li>
+                    <li tabindex="0">Educational Assistant</li>
+                    <li tabindex="0">Industrial Arts Education</li>
+                    <li tabindex="0">Technical Vocational Teacher Education</li>
                 </ul>
-            <li>
+            <li tabindex="0">
                 <h3>Part-time Programs</h3>
             </li>
                 <ul>
-                    <li>Educational Assistant</li>
-                    <li>Technical Vocational Teacher Education</li>
-                    <li>Teaching for Learning in Applied Education</li>
+                    <li tabindex="0">Educational Assistant</li>
+                    <li tabindex="0">Technical Vocational Teacher Education</li>
+                    <li tabindex="0">Teaching for Learning in Applied Education</li>
                 </ul>
         </ul>
     </section>
    
     <section id="Services">
-        <h2>Services</h2>
+        <h2 tabindex="0">Services</h2>
         <ul>   
-            <li>
+            <li tabindex="0">
                 <a href="https://www.rrc.ca/assessment/" target="_blank">Assessment Services</a>
             </li>
-            <li>
+            <li tabindex="0">
                 <a href="https://www.rrc.ca/housing/" target="_blank">Campus Living</a>
             </li>
-            <li>
+            <li tabindex="0">
                 <a href="https://www.rrc.ca/campusstore/" target="_blank">Campus Store</a>
             </li>
-            <li>
+            <li tabindex="0">
                 <a href="https://www.rrc.ca/services/child-care/" target="_blank">Child Care</a>
             </li>
-            <li>
+            <li tabindex="0">
                 <a href="https://www.rrc.ca/parking/" target="_blank">Commuting and Parking</a>
             </li>
-            <li>
+            <li tabindex="0">
                 <a href="https://www.rrc.ca/culex/" target="_blank">Culinary Exchange</a>
             </li>
-            <li>
+            <li tabindex="0">
                 <a href="https://www.rrc.ca/culex/" target="_blank">Facility Rentals</a>
             </li>
-            <li>
+            <li tabindex="0">
                 <a href="https://www.rrc.ca/foodservices/" target="_blank">Food Services</a>
             </li>
-            <li>
+            <li tabindex="0">
                 <a href="https://www.rrc.ca/health/" target="_blank">Health</a>
             </li>
-            <li>
+            <li tabindex="0">
                 <a href="https://www.rrc.ca/janes/" target="_blank">Jane's</a>
             </li>
-            <li>
+            <li tabindex="0">
                 <a href="https://www.rrc.ca/well-being/sport/" target="_blank">Recreation and Fitness</a>
             </li>
-            <li>
+            <li tabindex="0">
                 <a href="https://www.rrc.ca/services/student-service-centres/" target="_blank">Student Service Centres</a>
             </li>
         </ul> 
     </section>
 </body>
 <footer>
-    <h2>Contact Us</h2>
+    <h2 tabindex="0">Contact Us</h2>
     <ul>
-        <li>
+        <li tabindex="0">
             <img src="email.svg" alt="email icon" style="width:24px; height:24px; vertical-align: middle; margin-right:2px;">
             <a href="mailto:studentservices@rrc.ca" target="_blank"> studentservices@rrc.ca </a>
         </li>
-        <li>
+        <li tabindex="0">
             <img src="phone.svg" alt="phone icon" style="width: 24px; height: 24px; vertical-align: middle; margin-right: 2px;">
             <a href="tel:204-632-2327" target="_blank">204-632-2327</a>
         </li>
     </ul>
-    <p>&#169; 2024 RRC Polytech. All Rights Reserved.</p>
+    <p tabindex="0">&#169; 2024 RRC Polytech. All Rights Reserved.</p>
 </footer>
 
 </html>
