added inline comments

--- a/index.html
+++ b/index.html
@@ -34,7 +34,10 @@
     
         <h3>Exchange Campus</h3>
     </section>
+
+    <!--Education at RRC Polytech-->
     <section id="Education">
+        <!--tabindex added for keyboard navigation-->
         <h2 tabindex="0">Education</h2>
         <ul>
             <li tabindex="0">
@@ -57,10 +60,12 @@
             </li>
         </ul>
     </section>
-   
+    
+    <!--services at RRC Polytech-->
     <section id="Services">
         <h2 tabindex="0">Services</h2>
-        <ul>   
+        <ul>
+            <!--Clickable links-->  
             <li tabindex="0">
                 <a href="https://www.rrc.ca/assessment/" target="_blank">Assessment Services</a>
             </li>
@@ -100,9 +105,12 @@
         </ul> 
     </section>
 </body>
+
 <footer>
+    <!--contact RRC Polytech-->
     <h2 tabindex="0">Contact Us</h2>
     <ul>
+        <!--Added svg graphics-->
         <li tabindex="0">
             <img src="email.svg" alt="email icon" style="width:24px; height:24px; vertical-align: middle; margin-right:2px;">
             <a href="mailto:studentservices@rrc.ca" target="_blank"> studentservices@rrc.ca </a>
