added image and video to sevices section

--- a/index.html
+++ b/index.html
@@ -66,14 +66,19 @@
         <h2 tabindex="0">Services</h2>
         <ul>
             <!--Clickable links-->  
+            
             <li tabindex="0">
-                <a href="https://www.rrc.ca/assessment/" target="_blank">Assessment Services</a>
-            </li>
-            <li tabindex="0">
-                <a href="https://www.rrc.ca/housing/" target="_blank">Campus Living</a>
+                <a href="https://www.rrc.ca/housing/" target="_blank">Campus Living</a><p>Have you ever wanted to live in a downtown space that’s comfortable, convenient and has a great sense of community? RRC Polytech’s student residence is located in the Paterson GlobalFoods Institute in the heart of the Exchange District and provides the perfect blend of urban living and a supportive community atmosphere.</p>
+                <video width="400" height="300" autoplay muted controls>
+                    <source src="campus_living.mp4" type="video/mp4">
+                </video>
             </li>
             <li tabindex="0">
                 <a href="https://www.rrc.ca/campusstore/" target="_blank">Campus Store</a>
+                <figure>
+                    <img src="campus_store.jpg" alt="RRC Campus Store" style="width: 50%;">
+                    <figcaption>RRC Campus Store</figcaption>
+                </figure>
             </li>
             <li tabindex="0">
                 <a href="https://www.rrc.ca/services/child-care/" target="_blank">Child Care</a>
