--- a/index.html
+++ b/index.html
@@ -68,44 +68,62 @@
             <!--Clickable links-->  
             
             <li tabindex="0">
-                <a href="https://www.rrc.ca/housing/" target="_blank">Campus Living</a><p>Have you ever wanted to live in a downtown space that’s comfortable, convenient and has a great sense of community? RRC Polytech’s student residence is located in the Paterson GlobalFoods Institute in the heart of the Exchange District and provides the perfect blend of urban living and a supportive community atmosphere.</p>
+                <a href="https://www.rrc.ca/housing/" target="_blank">Campus Living</a><p>Have you ever wanted to live in a downtown space that’s comfortable, convenient and has a great sense of community?<br>RRC Polytech’s student residence is located in the Paterson GlobalFoods Institute in the heart of the Exchange District and <br>provides the perfect blend of urban living and a supportive community atmosphere.</p>
                 <video width="400" height="300" autoplay muted controls>
                     <source src="campus_living.mp4" type="video/mp4">
                 </video>
             </li>
             <li tabindex="0">
+                <a href="https://www.rrc.ca/services/child-care/" target="_blank">Child Care</a>
+                <p>For over 30 years, the RRC Early Childhood Centre Inc. has offered early childhood care and education to children of students<br> and staff at RRC Polytech as well as the surrounding community.</p>
+            </li>
+            <li tabindex="0">
                 <a href="https://www.rrc.ca/campusstore/" target="_blank">Campus Store</a>
                 <figure>
-                    <img src="campus_store.jpg" alt="RRC Campus Store" style="width: 50%;">
+                    <img src="campus_store.jpg" alt="RRC Campus Store" style="width: 30%;">
                     <figcaption>RRC Campus Store</figcaption>
                 </figure>
-            </li>
-            <li tabindex="0">
-                <a href="https://www.rrc.ca/services/child-care/" target="_blank">Child Care</a>
-            </li>
-            <li tabindex="0">
-                <a href="https://www.rrc.ca/parking/" target="_blank">Commuting and Parking</a>
-            </li>
-            <li tabindex="0">
-                <a href="https://www.rrc.ca/culex/" target="_blank">Culinary Exchange</a>
-            </li>
-            <li tabindex="0">
-                <a href="https://www.rrc.ca/culex/" target="_blank">Facility Rentals</a>
-            </li>
-            <li tabindex="0">
-                <a href="https://www.rrc.ca/foodservices/" target="_blank">Food Services</a>
-            </li>
-            <li tabindex="0">
-                <a href="https://www.rrc.ca/health/" target="_blank">Health</a>
-            </li>
-            <li tabindex="0">
-                <a href="https://www.rrc.ca/janes/" target="_blank">Jane's</a>
-            </li>
-            <li tabindex="0">
-                <a href="https://www.rrc.ca/well-being/sport/" target="_blank">Recreation and Fitness</a>
+                <p>RRC Polytech’s Campus Stores sells everything from books and course supplies to RRC Polytech-branded merchandise and stationery.</p>
             </li>
             <li tabindex="0">
                 <a href="https://www.rrc.ca/services/student-service-centres/" target="_blank">Student Service Centres</a>
+                <p>The Student Service Centres serve as the information centres and first point of contact for all RRC Polytech students and visitors.<br> The Centres offer a variety of services in one convenient location and support students by phone, email and in person.</p>
+                <p><i>If you prefer to call, you can reach us at 204-632-2327 or toll-free 1-800-903-7707 and we would be happy to answer your questions.</i></p>
+               <table>
+                    <caption> <b>Locations</b></caption>
+                    <tr>
+                        <th style="padding-right: 20px;">NOTRE DAME CAMPUS</th>
+                        <TH style="padding-left: 20px;">EXCHANGE DISTRICT CAMPUS</TH>
+                    </tr>
+                    <tr>
+                        <td>D101-2055 Notre Dame Avenue</td>
+                        <td style="padding-left: 20px;">P104-160 Princess Street</td>
+                    </tr>
+                    <tr>
+                        <td>Winnipeg, MB</td>
+                        <TD style="padding-left: 20px;">Winnipeg, MB</TD>
+                    </tr>
+                    <tr>
+                        <td>R3H 0J9</td>
+                        <td style="padding-left: 20px;">R3B 1K9</td>
+                    </tr>
+               </table> 
+               <br>
+               <table>
+                    <caption><b>Hours</b></caption>
+                    <tr>
+                        <th style="padding-left: 20px;">IN-PERSON</th>
+                        <th style="padding-left: 20px;">PHONE</th>
+                    </tr>
+                    <tr>
+                        <td style="padding-right: 20px"><b>Monday-Thursday:</b> 8:30am-4:00pm</td>
+                        <td style="padding-left: 20px;"><b>Monday-Thursday:</b> 8:00am-3:45pm</td>
+                    </tr>
+                    <tr>
+                        <td style="padding-right: 20px;"><b> Friday:</b> 9:00am-4:00pm</td>
+                        <td style="padding-left: 20px;"><b>Friday:</b> 9:00am-3:45pm</td>
+                    </tr>
+               </table>
             </li>
         </ul> 
     </section>
