checked by W3C Validator, and modified some issues.

--- a/index.html
+++ b/index.html
@@ -16,24 +16,27 @@
         <img src="RRC-Polytech-Stacked.png" alt="ICon of RRC" width ="300">
         <nav>
             <ul>
+                <li><a href="#About">About RRC</a></li>
                 <li><a href="#Campuses">Campuses</a></li>
                 <li><a href="#Education">Education</a></li>
                 <li><a href="#Services">Services</a></li>
             </ul>
         </nav>
     </header>
-            <h2>About RRC</h2>
-            <figure>
-                <video src="campus tour.mp4"  width="300" controls>Your browser does not support the video tag.</video>
-                <figcaption>Campus tour</figcaption>
-            </figure>
-            <p>
-                RRC Polytech is Manitoba's largest institute of applied learning and research, with more than <br>
-                150 full- and part-time degree, diploma and certificate options. Through hands-on and online <br>
-                learning opportunities and state-of-the-art instruction, we prepare our students to become<br> 
-                leaders in their fields — while also ensuring they can meet changing industry demands, and<br> 
-                contribute to the province's economic growth.
-            </p>
+    <section id="About">
+        <h2>About RRC</h2>
+        <figure>
+            <video src="campus_tour.mp4"  width="300" controls muted title="Campus tour">Your browser does not support the video tag.</video>
+            <figcaption>Campus tour</figcaption>
+        </figure>
+        <p>
+            RRC Polytech is Manitoba's largest institute of applied learning and research, with more than <br>
+            150 full- and part-time degree, diploma and certificate options. Through hands-on and online <br>
+            learning opportunities and state-of-the-art instruction, we prepare our students to become<br> 
+            leaders in their fields — while also ensuring they can meet changing industry demands, and<br> 
+            contribute to the province's economic growth.
+        </p>
+    </section>
     <section id="Campuses">
         <h2>Campuses</h2>
         <p>RRC Polytech has two campuses in Winnipeg</p>
@@ -52,10 +55,10 @@
             transportation technology, health sciences and engineering programs. In addition, the Notre Dame Campus features a<br>
             wide variety of services and amenities, and applied research labs.
         </p>
-        <h3>Exchange Campus</h3>
+        <h3>Exchange District Campus</h3>
         <figure>
             <img src="roblin-centre-2023.jpg" alt="Exchange Campus"  width="300">
-            <figcaption>Exchange Campus</figcaption>
+            <figcaption>Exchange District Campus</figcaption>
         </figure>
         <p>
             <span class="bold-text">Address:</span>
@@ -63,9 +66,11 @@
             Winnipeg, MB R3B 1K9
         </p>
         <p>
-            The Exchange District Campus is nestled in the heart of downtown Winnipeg and is home to RRC Polytech,<br> business, creative arts, IT, culinary arts and hospitality programs. Featuring modern classrooms, relaxing study <br>spaces, and state-of the-art equipment, the Exchange District Campus also has a wide variety of services and amenities,<br> applied research labs and two student-run dining options.
-        </p>
-        
+            The Exchange District Campus is nestled in the heart of downtown Winnipeg and is home to RRC Polytech,<br> 
+            business, creative arts, IT, culinary arts and hospitality programs. Featuring modern classrooms, relaxing study<br>
+            spaces, and state-of the-art equipment, the Exchange District Campus also has a wide variety of services and amenities,<br>
+            applied research labs and two student-run dining options.
+        </p>    
     </section>
     <section id="Education">
         <h2>Education</h2>
