made necessary adjustments

--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
                 <a href="https://www.rrc.ca/services/student-service-centres/" target="_blank">Student Service Centres</a>
                 <p>The Student Service Centres serve as the information centres and first point of contact for all RRC Polytech students and visitors.<br> The Centres offer a variety of services in one convenient location and support students by phone, email and in person.</p>
                 <p><i>If you prefer to call, you can reach us at 204-632-2327 or toll-free 1-800-903-7707 and we would be happy to answer your questions.</i></p>
+                <!--added a table-->
                <table>
                     <caption> <b>Locations</b></caption>
                     <tr>
@@ -127,22 +128,23 @@
             </li>
         </ul> 
     </section>
+    <footer>
+        <!--contact RRC Polytech-->
+        <h2 tabindex="0">Contact Us</h2>
+        <ul>
+            <!--Added svg graphics-->
+            <li tabindex="0">
+                <img src="email.svg" alt="email icon" style="width:24px; height:24px; vertical-align: middle; margin-right:2px;">
+                <a href="mailto:studentservices@rrc.ca" target="_blank"> studentservices@rrc.ca </a>
+            </li>
+            <li tabindex="0">
+                <img src="phone.svg" alt="phone icon" style="width: 24px; height: 24px; vertical-align: middle; margin-right: 2px;">
+                <a href="tel:204-632-2327" target="_blank">204-632-2327</a>
+            </li>
+        </ul>
+        <p tabindex="0">&#169; 2024 RRC Polytech. All Rights Reserved.</p>
+    </footer>
 </body>
 
-<footer>
-    <!--contact RRC Polytech-->
-    <h2 tabindex="0">Contact Us</h2>
-    <ul>
-        <!--Added svg graphics-->
-        <li tabindex="0">
-            <img src="email.svg" alt="email icon" style="width:24px; height:24px; vertical-align: middle; margin-right:2px;">
-            <a href="mailto:studentservices@rrc.ca" target="_blank"> studentservices@rrc.ca </a>
-        </li>
-        <li tabindex="0">
-            <img src="phone.svg" alt="phone icon" style="width: 24px; height: 24px; vertical-align: middle; margin-right: 2px;">
-            <a href="tel:204-632-2327" target="_blank">204-632-2327</a>
-        </li>
-    </ul>
-    <p tabindex="0">&#169; 2024 RRC Polytech. All Rights Reserved.</p>
-</footer>
+
 </html>
