added some comments of the first two sections

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 </head>
 <body>
     <header>
+    <!--header and  navigations -->
     <h1>Red River PolyTech College</h1> 
         <img src="RRC-Polytech-Stacked.png" alt="ICon of RRC" width ="300">
         <nav>
@@ -23,6 +24,7 @@
             </ul>
         </nav>
     </header>
+    <!--brief description of RRC -->
     <section id="About">
         <h2>About RRC</h2>
         <figure>
@@ -37,6 +39,7 @@
             contribute to the province's economic growth.
         </p>
     </section>
+    <!--brief campuses description of RRC -->
     <section id="Campuses">
         <h2>Campuses</h2>
         <p>RRC Polytech has two campuses in Winnipeg</p>
