final check on validator.w3

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             contribute to the province's economic growth.
         </p>
     </section>
-    <!--brief campuses description of RRC -->
+    <!--brief description of campuses of RRC -->
     <section id="Campuses">
         <h2>Campuses</h2>
         <p>RRC Polytech has two campuses in Winnipeg</p>
